# vlo

./: .gitignore  CLA-INDIVIDUAL.md  CONTRIBUTING.md  README.md  extra_model_paths.yaml.example  install.bat  install.sh  launch_comfy.sh  package-lock.json  package.json  run.bat  run.sh
backend/: .env.example  api_errors.py  config.py  main.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/assets/.config/: info.txt
backend/assets/workflows/: MaskLoadTest.json  MaskLoadTest.rules.json  rotate_image_API_test.json  rotate_image_API_test.rules.json  test_workflow_API.json  test_workflow_notAPI.json  test_workflow_notAPI.rules.json  video_ltx2_3_i2v.rules.json  video_ltx2_i2v_edit.json  video_wan_vace_14B_v2v.json  video_wan_vace_14B_v2v.rules.json  video_wan_vace_inpainting.json  video_wan_vace_inpainting.rules.json  vlo_VACE_inpaint.rules.json  vlo_test_flow.json  vlo_test_flow.rules.json  wan2_2_flf2v.rules.json
backend/routers/: comfyui.py  comfyui_compat.py  sam2.py
backend/services/comfyui/: comfyui_client.py  comfyui_generate.py
backend/services/gen_pipeline/: README.md  __init__.py  context.py  runner.py  types.py
backend/services/legacy_core/: asset_service.py  project_service.py
backend/services/sam2/: sam2_discovery.py  (+2 more)
backend/tests/: test_asset_service.py  test_comfyui_workflow_persistence.py  test_gen_pipeline_processor_utils.py  test_generation_phase_structure.py  test_mask_crop.py  test_release_runtime.py  test_sam2.py  test_sam2_discovery.py  test_submit_prompt_metadata.py  test_video_crop.py  test_workflow_rules.py
(+464 files in other folders)
